feat: add header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
 </head>
 
 <body>
-
+  <div class="global-wrapper">
+    <header class="header">
+      <div class="header__left">
+        <div class="burger">
+          <img src="./assets/nav-icon.svg" alt="nav">
+        </div>
+        <h1>Codejam - Palette</h1>
+      </div>
+      <div class="dots">
+          <img src="./assets/menu-icon.svg" alt="menu">
+      </div>
+    </header>
+    <main class="main"></main>
+  </div>
   <script src="./js/index.js"></script>
 </body>
 
