feat: add canvas functionality

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
       <div class="canvas-wrapper">
         <div class="size-switcher">
-          <div class="size-switcher__item" id="sw4">
+          <div class="size-switcher__item size-switcher__item--selected" id="sw4">
             <p>4x4 matrix</p>
           </div>
           <div class="size-switcher__item" id="sw32">
